Fix spacing with phone view

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -152,7 +152,7 @@ h3 {
     color: #ebd5d5;;
     font-weight: bold;
     margin-top: 0; 
-    margin-bottom: -18px;
+    margin-bottom: -15px;
 }
 
 .progress {
@@ -169,7 +169,8 @@ h3 {
 
 @media screen and (max-width: 767px) {
 .details {
-    width: 350px;
+    width: 430px;
+
 }
 
 .title {
@@ -195,6 +196,16 @@ h3 {
     padding-right: 0; 
     padding-left: 0;
 }
+
+.link, 
+.deploy {
+    position: relative; 
+    z-index: 1; 
+    margin-bottom: -55px; 
+    height: 38px; 
 }
 
-/* 1024 */
+.social {
+    margin-top: 32px; 
+}
+}
